<?xml version="1.0" encoding="utf-8"?>
<ui version="4.0">
 <author>
    SPDX-FileCopyrightText: none
    SPDX-License-Identifier: GPL-3.0-or-later
  </author>
 <class>WdgHSVAdjustment</class>
 <widget class="QWidget" name="WdgHSVAdjustment">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>412</width>
    <height>188</height>
   </rect>
  </property>
  <layout class="QGridLayout">
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <property name="verticalSpacing">
    <number>5</number>
   </property>
   <item colspan="2" column="0" row="13">
    <spacer>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>0</height>
      </size>
     </property>
    </spacer>
   </item>
   <item column="0" row="0">
    <widget class="QLabel" name="lblType">
     <property name="text">
      <string>&amp;Type:</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
     <property name="buddy">
      <cstring>cmbType</cstring>
     </property>
    </widget>
   </item>
   <item column="1" row="9">
    <widget class="QCheckBox" name="chkColorize">
     <property name="text">
      <string>&amp;Colorize</string>
     </property>
    </widget>
   </item>
   <item column="1" row="0">
    <widget class="QComboBox" name="cmbType">
     <property name="currentIndex">
      <number>0</number>
     </property>
     <item>
      <property name="text">
       <string>Hue/Saturation/Value</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Hue/Saturation/Lightness</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Hue/Saturation/Intensity</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Hue/Saturation/Luma</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Blue Chroma/Red Chroma/Luma</string>
      </property>
     </item>
    </widget>
   </item>
   <item column="1" row="2">
    <widget class="QSlider" name="hueSlider">
     <property name="minimum">
      <number>-180</number>
     </property>
     <property name="maximum">
      <number>180</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </item>
   <item column="2" row="4">
    <widget class="KisIntParseSpinBox" name="saturationSpinBox">
     <property name="minimum">
      <number>-100</number>
     </property>
     <property name="maximum">
      <number>100</number>
     </property>
    </widget>
   </item>
   <item column="0" row="5">
    <widget class="QLabel" name="label_3">
     <property name="text">
      <string>&amp;Value:</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
     <property name="buddy">
      <cstring>valueSlider</cstring>
     </property>
    </widget>
   </item>
   <item column="1" row="4">
    <widget class="QSlider" name="saturationSlider">
     <property name="minimum">
      <number>-100</number>
     </property>
     <property name="maximum">
      <number>100</number>
     </property>
     <property name="value">
      <number>0</number>
     </property>
     <property name="tracking">
      <bool>true</bool>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="invertedAppearance">
      <bool>false</bool>
     </property>
     <property name="invertedControls">
      <bool>false</bool>
     </property>
     <property name="tickPosition">
      <enum>QSlider::NoTicks</enum>
     </property>
    </widget>
   </item>
   <item column="0" row="4">
    <widget class="QLabel" name="label_2">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>&amp;Saturation:</string>
     </property>
     <property name="scaledContents">
      <bool>false</bool>
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
     <property name="buddy">
      <cstring>saturationSlider</cstring>
     </property>
    </widget>
   </item>
   <item column="0" row="2">
    <widget class="QLabel" name="label">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>&amp;Hue:</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
     <property name="buddy">
      <cstring>hueSlider</cstring>
     </property>
    </widget>
   </item>
   <item column="1" row="5">
    <widget class="QSlider" name="valueSlider">
     <property name="minimum">
      <number>-100</number>
     </property>
     <property name="maximum">
      <number>100</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </item>
   <item column="2" row="5">
    <widget class="KisIntParseSpinBox" name="valueSpinBox">
     <property name="minimum">
      <number>-100</number>
     </property>
     <property name="maximum">
      <number>100</number>
     </property>
    </widget>
   </item>
   <item column="2" row="2">
    <widget class="KisIntParseSpinBox" name="hueSpinBox">
     <property name="minimum">
      <number>-180</number>
     </property>
     <property name="maximum">
      <number>180</number>
     </property>
    </widget>
   </item>
   <item column="2" row="9">
    <widget class="QPushButton" name="reset">
     <property name="text">
      <string>Reset</string>
     </property>
    </widget>
   </item>
   <item column="1" row="10">
    <widget class="QCheckBox" name="chkCompatibilityMode">
     <property name="text">
      <string>Legacy mode (before Krita 4.3)</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>KisIntParseSpinBox</class>
   <extends>QSpinBox</extends>
   <header>kis_int_parse_spin_box.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>cmbType</tabstop>
  <tabstop>chkColorize</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>